contour-ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: contour
  annotations:
    # This annotation is standard and specifies this is the default class
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  # This value MUST be set to Contour's controller name to work correctly.
  controller: projectcontour.io/ingress-controller
