nginx-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue
spec:
  replicas: 3 # You can adjust the number of replicas
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      containers:
      - name: nginx-green
        image: thekoguryo/nginx-hello:blue
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-service
spec:
  selector:
    app: nginx-blue
  ports:
  - protocol: TCP
    port: 80 # The port that the service exposes internally
    targetPort: 80 # The container port
    nodePort: 30001 #  A port in the NodePort range (30000-32767). Kubernetes will allocate one if you omit this.
  type: NodePort
