nginx-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
spec:
  replicas: 3 # You can adjust the number of replicas
  selector:
    matchLabels:
      app: nginx-green
  template:
    metadata:
      labels:
        app: nginx-green
    spec:
      containers:
      - name: nginx-green
        image: thekoguryo/nginx-hello:green
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-green-service
spec:
  selector:
    app: nginx-green
  ports:
  - protocol: TCP
    port: 80 # The port that the service exposes internally
    targetPort: 80 # The container port
    nodePort: 30002 #  A port in the NodePort range (30000-32767). Kubernetes will allocate one if you omit this.
  type: NodePort
